--- a/src/FrpClient/FrpClient.UI/FrpClient.UI.csproj
+++ b/src/FrpClient/FrpClient.UI/FrpClient.UI.csproj
@@ -124,6 +124,9 @@
       <Name>FrpClient.Business</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <TransformFile Include="Resources\menu\navigation.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
