--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -11,7 +11,7 @@ on:
         required: false
 
 permissions:
-  contents: write  # needed to create release
+  contents: write
 
 env:
   DOTNET_NOLOGO: true
@@ -36,7 +36,7 @@ jobs:
           dotnet-version: '10.0.x'
 
       - name: Decode keystore into project directory
-        if: secrets.ANDROID_KEYSTORE_B64 != ''
+        if: ${{ secrets.ANDROID_KEYSTORE_B64 }}  != ''
         run: |
           set -e
           PROJECT_DIR="$(pwd)/src"  # FrpAndroid.csproj ËùÔÚÄ¿Â¼
