--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -41,7 +41,7 @@ jobs:
           set -e
           SDK_VER=$(dotnet --version)
             echo "Installing maui-android workload for SDK $SDK_VER"
-          dotnet workload install maui-android --version $SDK_VER --source https://api.nuget.org/v3/index.json
+          dotnet workload install maui-android --sdk-version $SDK_VER --source https://api.nuget.org/v3/index.json
           dotnet workload list | grep maui-android || true
 
       - name: Decode keystore (optional)
